Enum role {
    STUDENT
    TEACHER
}

Enum visibility {
    PUBLIC
    PRIVATE
}

Table user {
  id uuid [pk]
  username varchar [not null, unique]
  password varchar [not null]
  email varchar [not null, unique]
  user_role role
  visibility visibility 
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table user_follow {
  id uuid [pk, unique]
  follower uuid [not null]
  following uuid [not null]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Ref: user_follow.follower > user.id [delete: cascade]
Ref: user_follow.following > user.id [delete: cascade]

Table class {
  id uuid [pk, unique]
  admin_id uuid [not null]
  name varchar [not null]
  description varchar [not null]
  section varchar [not null]
  room varchar [not null]
  subject varchar [not null]
  invite_code uuid [not null]
  visibility visibility
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Ref: class.admin_id > user.id [delete: cascade]

Table class_work {
  id uuid [pk, unique]
  name varchar [not null]
  user_id uuid [not null]
  class_id uuid [not null]
  mark int [default: `0`]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Ref: class_work.user_id > user.id [delete: cascade]
Ref: class_work.class_id > class.id [delete: cascade]

Table class_member {
  id uuid [pk, unique]
  class_id uuid [not null]
  user_id uuid [not null]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Ref: class_member.class_id > class.id [delete: cascade]
Ref: class_member.user_id > user.id [delete: cascade]

Table post {
  id uuid [pk, unique]
  content varchar [not null]
  author_id uuid [not null]
  class_id uuid [not null]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Ref: post.author_id > user.id [delete: cascade]
Ref: post.class_id > class.id [delete: cascade]

Table post_like {
  id uuid [pk, unique]
  post_id uuid [not null]
  user_id uuid [not null]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Ref: post_like.post_id > post.id [delete: cascade]
Ref: post_like.user_id > user.id [delete: cascade]

Table comment {
  id uuid [pk]
  content varchar [not null]
  author_id uuid [not null]
  post_id uuid [not null]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Ref: comment.author_id > user.id [delete: cascade]
Ref: comment.post_id > post.id [delete: cascade]

Table comment_like {
  id uuid [pk, unique]
  comment_id uuid [not null]
  user_id uuid [not null]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Ref: comment_like.comment_id > comment.id [delete: cascade]
Ref: comment_like.user_id > user.id [delete: cascade]


